# spsim

./: .gitignore  Cargo.toml  README.md  pyproject.toml  spsim.pyi
.github/workflows/: rust-ci.yaml
examples/: diamond.py  hex.py  ibm_heavy_hex.py
src/: gate.rs  lib.rs  observable.rs  pauli_string.rs  pywrap.rs  spsim.rs
